--- a/#source/index.html
+++ b/#source/index.html
@@ -14,7 +14,7 @@
 
 <body>
 	<div class="wrapper">
-<header class="header">
+		<header class="header">
 	<div class="container">
 		<div class="header__row">
 			<!-- 
@@ -34,22 +34,24 @@
 			 -->
 		</div>
 	</div>
-</header>		<div class="mainblock">
+</header>
+		<div class="mainblock">
 			<div class='container'>
-				<div class="mainblock__charger">Hello</div>
+				<div class="mainblock__charger">Hello world!!!</div>
 				<div class="mainblock__no-problem">
 					<div class="mainblock__image"><img src="../img/" alt="" /></div>
 				</div>
 			</div>
 		</div>
-<footer class="footer">
+		<footer class="footer">
 	<div class='container'>
 		<div class="footer__row">
 			
 		</div>
 	</div>
-</footer>	</div>
-<div class="popup">
+</footer>
+	</div>
+	<div class="popup">
 	<div class="popup-table table">
 		<div class="cell">
 			<div class="popup-content">
@@ -81,11 +83,13 @@
 			<div class="popup-video__value video"></div>
 		</div>
 	</div>
-</div><script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+</div>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <!-- <script src="https://code.jquery.com/jquery-migrate-3.0.1.min.js"></script> -->
 <script src="js/vendors.js"></script>
 <script src="js/main.js"></script>
 <script src="js/custom.js" ></script>
+
 </body>
 
 </html>
