--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
 	<div class="wrapper">
 		<header class="header">
-			<div class="container">
-				<div class="header__row">
-					<!-- 
+	<div class="container">
+		<div class="header__row">
+			<!-- 
 				html меню с иконкой бургера
 				<div class="header__menu menu">
 					<div class="menu__icon icon-menu">
@@ -31,64 +31,99 @@
 						</ul>
 					</nav>
 				</div>
-			-->
-				</div>
-			</div>
-		</header>
-		<div class="mainblock">
-			<div class='container'>
-				<div class="mainblock__charger"></div>
-				<div class="mainblock__no-problem">
-					<div class="mainblock__image"><img src="../img/" alt="" /></div>
-				</div>
-			</div>
+			 -->
 		</div>
-		<footer class="footer">
-			<div class='container'>
-				<div class="footer__row">
+	</div>
+</header>
+		<section class="mainblock">
+			<div class="mainblock__content">
+				<div class="container">
+					<!-- Ограничение контекстной части -->
+					<div class="mainblock__context">
+						<div class="mainblock__title">Charger</div>
+						<div class="mainblock__body">
+							<div class="mainblock__slogan">
+								<a href="" class="mainblock__slogan-logo"><img src="../img/mainblock/4.png" alt="" /></a>
+								<div class="mainblock__slogan-text">
+									<div class="mainblock__slogan-string-1">Battery Down?</div>
+									<div class="mainblock__slogan-string-2">No Problem Anymore!</div>
+								</div>
+							</div>
+							<div class="mainblock__text">
+								With Charger you can easily find a place nearby to charge your phone and
+								charge yourself, say, with a cup of delicious coffee or whatever you wish at the moment.
+							</div>
+							<a class="mainblock__apple" href="https://www.apple.com/ios/app-store/">
+								<div class="mainblock__apple-inner">
+									<div class="mainblock__apple-logo">
+										<img src="../img/mainblock/5.svg" alt="" />
+									</div>
+									<div class="mainblock__apple-text">
+										<div class="mainblock__apple-soon">Soon on the</div>
+										<div class="mainblock__apple-store">App Store</div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<div class="mainblock__footer">
 
+						</div>
+					</div>
+					<!-- Ограничение контекстной части -->
 				</div>
 			</div>
-		</footer>
+			<div class="mainblock__ibg ibg">
+				<img src="../img/mainblock/1.jpg" alt="" />
+			</div>
+		</section>
+
+		<footer class="footer">
+	<div class='container'>
+		<div class="footer__row">
+			
+		</div>
+	</div>
+</footer>
 	</div>
 	<div class="popup">
-		<div class="popup-table table">
-			<div class="cell">
-				<div class="popup-content">
-					<div class="popup-close"></div>
-					<div class="popup__title"></div>
-					<div class="popup__txt"></div>
-					<form action="#" class="popup-form form">
-						<div class="form-input">
-							<input autocomplete="off" type="text" name="form[]" data-value="" class="input" />
-						</div>
-						<div class="form-input">
-							<input autocomplete="off" type="text" name="form[]" data-value="" class="input req email" />
-						</div>
-						<div class="form-input">
-							<input autocomplete="off" type="text" name="form[]" data-value="" class="input req" />
-						</div>
-						<div class="form-button">
-							<button type="submit" class="form__btn btn fw"></button>
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="popup popup-video">
-		<div class="popup-table table">
-			<div class="cell">
+	<div class="popup-table table">
+		<div class="cell">
+			<div class="popup-content">
 				<div class="popup-close"></div>
-				<div class="popup-video__value video"></div>
+				<div class="popup__title"></div>
+				<div class="popup__txt"></div>
+				<form action="#" class="popup-form form">
+					<div class="form-input">
+						<input autocomplete="off" type="text" name="form[]" data-value="" class="input" />
+					</div>
+					<div class="form-input">
+						<input autocomplete="off" type="text" name="form[]" data-value="" class="input req email" />
+					</div>
+					<div class="form-input">
+						<input autocomplete="off" type="text" name="form[]" data-value="" class="input req" />
+					</div>
+					<div class="form-button">
+						<button type="submit" class="form__btn btn fw"></button>
+					</div>
+				</form>
 			</div>
 		</div>
 	</div>
+</div>
+<div class="popup popup-video">
+	<div class="popup-table table">
+		<div class="cell">
+			<div class="popup-close"></div>
+			<div class="popup-video__value video"></div>
+		</div>
+	</div>
+</div>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-	<!-- <script src="https://code.jquery.com/jquery-migrate-3.0.1.min.js"></script> -->
-	<script src="js/vendors.js"></script>
-	<script src="js/main.js"></script>
-	<script src="js/custom.js"></script>
+<!-- <script src="https://code.jquery.com/jquery-migrate-3.0.1.min.js"></script> -->
+<script src="js/vendors.js"></script>
+<script src="js/main.js"></script>
+<script src="js/custom.js" ></script>
+
 </body>
 
 </html>
